--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,21 @@ click==8.2.1
 colorama==0.4.6
 coloredlogs==15.0.1
 distro==1.9.0
+dnspython==2.8.0
 durationpy==0.10
+email-validator==2.3.0
 fastapi==0.117.1
+fastapi-cli==0.0.12
+fastapi-cloud-cli==0.2.0
 filelock==3.19.1
 flatbuffers==25.2.10
 fsspec==2025.9.0
 google-auth==2.40.3
+google-genai==1.38.0
 googleapis-common-protos==1.70.0
 grpcio==1.75.0
 h11==0.16.0
+hf-xet==1.1.10
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
@@ -31,6 +37,7 @@ importlib_metadata==8.7.0
 importlib_resources==6.5.2
 iniconfig==2.1.0
 Jinja2==3.1.6
+jiter==0.11.0
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
@@ -43,8 +50,23 @@ mmh3==5.2.0
 mpmath==1.3.0
 networkx==3.5
 numpy==2.3.3
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 onnxruntime==1.22.1
+openai==1.108.1
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
 opentelemetry-exporter-otlp-proto-grpc==1.37.0
@@ -72,18 +94,22 @@ pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
+python-multipart==0.0.20
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2025.9.1
 requests==2.32.5
 requests-oauthlib==2.0.0
 rich==14.1.0
+rich-toolkit==0.15.1
+rignore==0.6.4
 rpds-py==0.27.1
 rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
 sentence-transformers==5.1.0
+sentry-sdk==2.38.0
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
@@ -92,15 +118,18 @@ starlette==0.48.0
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tiktoken==0.11.0
 tokenizers==0.22.0
 torch==2.8.0
 tqdm==4.67.1
 transformers==4.56.1
+triton==3.4.0
 typer==0.17.4
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.35.0
+uvloop==0.21.0
 watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
