--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - CHROMA_SERVER_HOST=0.0.0.0
       - CHROMA_SERVER_HTTP_PORT=8000
       - ANONYMIZED_TELEMETRY=FALSE
-    command: ["chroma", "run", "--host", "0.0.0.0", "--port", "8000", "--path", "/chroma/chroma"]
+    command: ["run", "--host", "0.0.0.0", "--port", "8000", "--path", "/chroma/chroma"]
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v2/heartbeat"]
@@ -36,9 +36,10 @@ services:
       - CHROMA_PORT=8000
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - MIN_TOKENS=300
-      - MAX_TOKENS=500
-      - USE_TIKTOKEN=false
+      - MIN_TOKENS=${MIN_TOKENS:-300}
+      - MAX_TOKENS=${MAX_TOKENS:-500}
+      - PYTHONPATH=/app/src:/app
+      - USE_TIKTOKEN=${USE_TIKTOKEN:-false}
     volumes:
       - ./docs:/app/docs:ro
       - ./chroma_data:/app/chroma_data
@@ -54,6 +55,10 @@ services:
       start_period: 60s
     networks:
       - rag-network
+
+volumes:
+  chroma_data:
+    driver: local
 
 networks:
   rag-network:
