--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ numpy==2.3.3
 oauthlib==3.3.1
 onnxruntime==1.22.1
 openai==1.108.1
+openpyxl==3.1.5
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
 opentelemetry-exporter-otlp-proto-grpc==1.37.0
@@ -62,6 +63,7 @@ opentelemetry-semantic-conventions==0.58b0
 orjson==3.11.3
 overrides==7.7.0
 packaging==25.0
+pandas==2.2.3
 pillow==11.3.0
 pluggy==1.6.0
 posthog==5.4.0
